# samplecode

./: README.md  cpptemplate.cpp  gtest.cpp  mmap.c  signal.c  syslog.c
AndroidRssReader/: AndroidManifest.xml  README.md  project.properties
AndroidRssReader/res/layout/: list_item.xml  main.xml  pref.xml  read.xml
AndroidRssReader/res/values/: strings.xml
AndroidRssReader/res/values-zh/: strings.xml
AndroidRssReader/src/org/expressme/wireless/reader/: MainActivity.java  PrefActivity.java  ReadActivity.java  RssAdapter.java  SubsActivity.java
AndroidRssReader/src/org/expressme/wireless/reader/fetcher/: FeedFetcher.java  Response.java
AndroidRssReader/src/org/expressme/wireless/reader/parser/: FeedParser.java  FeedParserHandler.java
AndroidRssReader/src/org/expressme/wireless/reader/provider/: ReadingOpenHelper.java
AndroidRssReader/src/org/expressme/wireless/reader/service/: ReadingService.java
MyTools/src/: mytool.cpp  mytool.h
MyTools/src/MyTools/: MyTools.dsp
dbus/: client.c  server.c
expatApp/: Makefile  expatApp.c  expatApp.xml
inject/: a.c  b.c  b_a.c  c.c
jni/: HelloWorld.cpp  HelloWorld.java
kernel_module/: helloworld.c
mycrypto/: CMakeLists.txt  mydec.cpp  myenc.cpp
myipc/: myipc1.cc  myipc2.cc
rssreader/: load.java
rssreader/control/: feedmanager.java
rssreader/view/: button.java  list.java
rssreader2/: README.md  rss.cpp  rss.xml
soundSample/: Makefile  common.h  soundPlayer.c  soundRecorder.c
udpfile/: Makefile  client.c  mycommon.h  server.c
