PROJECT(mycrypto)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -g")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -s")
ADD_EXECUTABLE(myenc myenc.cpp)
TARGET_LINK_LIBRARIES(myenc crypto)
ADD_EXECUTABLE(mydec mydec.cpp)
